# not-bulk

./: .gitignore  CLAUDE.md  config.yaml  docker-compose.yml  notbulk-spec.md
db/: schema.sql
eval/: baseline.json  regression.py
infra/: egress-manifest.md
migrations/: 001_m1_reference_tables.sql  002_m2_app_tables.sql  003_m3_prices.sql  004_m4_exports.sql
web/: package.json  pnpm-lock.yaml
worker/: pyproject.toml
worker/notbulk/: __init__.py  augment.py  cascade.py  cli.py  config.py  db.py  detect.py  discord.py  embed.py  fetcher.py  hash_index.py  hashing.py  imagegate.py  jobqueue.py  llm.py  ocr.py  preprocess.py  storage.py  types.py  worker.py
worker/notbulk/handlers/: __init__.py  correction.py  detect.py  fetch.py  finish.py  identify.py  price.py
worker/notbulk/pricing/: __init__.py  cache.py  sources.py
worker/scripts/: build_embed_index.py  build_hash_index.py  download_refs.py
worker/tests/: fakes.py  fixtures.py  test_augment.py  test_build_embed_index.py  test_build_hash_index.py  test_cascade.py  test_cli.py  test_config.py  test_db.py  test_detect.py  test_discord.py  test_download_refs.py  test_embed.py  test_fetcher.py  test_handler_correction.py  test_handler_detect.py  test_handler_fetch.py  test_handler_finish.py  test_handler_identify.py  test_handler_price.py  test_hash_index.py  test_hashing.py  test_imagegate.py  test_jobqueue.py  test_llm.py  test_ocr.py  test_preprocess.py  test_pricing_cache.py  test_pricing_sources.py  test_storage.py  test_types.py  test_worker.py  test_worker_claim.py
worker/tests/fixtures/: pokemontcg_page.json
(+97 files in other folders)
