[project]
name = "notbulk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Bryson", email = "bryson@redshirt.cloud" }
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.4.6",
    "opencv-python-headless>=5.0.0.93",
    "psycopg-pool>=3.3.1",
    "psycopg[binary]>=3.3.4",
    "pyyaml>=6.0.3",
    "uuid6>=2025.0.1",
]

[project.scripts]
notbulk = "notbulk:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["notbulk"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
